<resources>
    <string name="app_name">Pdm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>

    <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
    <string name="profile_title">Mr Bean</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <!-- font families -->
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>

    <string name="ui">UI</string>
    <string name="dark_mode_def_value">MODE_NIGHT_FOLLOW_SYSTEM</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Update Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="c_passowrd">Confirm Password</string>
    <string name="signup">No Accont? Signup Now</string>
    <string name="login">Login</string>
    <string name="login_text">Have an account? Login</string>
    <string name="register">Register</string>
    <string name="upload">Upload</string>
    <string name="address">Address</string>
    <string name="dark_text">turn dark mode on or off</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="job_category">Job Category</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="job_type">Job Type</string>
    <string name="job_description">Job Description</string>
    <string name="description">Description</string>
    <string name="attachment_s">Attachment(s)</string>
    <string name="add_attachment">Add Image</string>
    <string name="save_job">Save Job</string>
    <string name="title_activity_view_job">ViewJobActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="hvac">HVAC</string>
</resources>
