<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_accounting"
            android:title="@string/account" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_user"
            android:title="@string/profile" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/action_settings" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />

        </menu>
    </item>
</menu>
