<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    android:background="@color/goldenRod"
    tools:context=".RegisterActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            >

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/logo"
                android:layout_gravity="center"
                />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:imeOptions="actionNext"
                />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                />


            <EditText
                android:id="@+id/phone_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:layout_marginBottom="10dp"
                android:inputType="phone"
                android:imeOptions="actionNext"
                />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/c_passowrd"
                android:layout_marginBottom="30dp"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/signup_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/black"
                    android:text="@string/register"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/login_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_text"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/black"

                    />
            </LinearLayout>
        </LinearLayout>


    </FrameLayout>

</ScrollView>