<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/goldenRod"
    tools:context=".ProfileFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="@dimen/toolbar_profile_width"
                android:layout_height="wrap_content">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/img_profile"
                    android:layout_width="@dimen/toolbar_profile_width"
                    android:layout_height="@dimen/toolbar_profile_width"
                    android:layout_marginTop="@dimen/activity_padding"
                    android:layout_marginBottom="@dimen/activity_padding"
                    android:scaleType="centerInside"
                    android:src="@drawable/baseline_account_circle_black_48"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="2dp" />

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/img_plus"
                    android:layout_width="@dimen/ic_plus_width"
                    android:layout_height="@dimen/ic_plus_width"
                    android:layout_alignBottom="@id/img_profile"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_plus"
                    app:civ_shadow="true"
                    app:civ_shadow_radius="1"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family_medium"
                android:text="@string/profile_title"
                android:textColor="@android:color/black"
                android:textSize="@dimen/profile_title" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:layout_marginBottom="10dp"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:layout_marginBottom="10dp"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    />


                <EditText
                    android:id="@+id/phone_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:layout_marginBottom="10dp"
                    android:inputType="phone"
                    android:imeOptions="actionNext"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:layout_marginBottom="10dp"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress"
                    />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:layout_marginBottom="10dp"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/update_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="20dp"
                        android:background="@color/black"
                        android:text="@string/update"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </FrameLayout>

</RelativeLayout>