<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    android:background="@color/goldenRod"
    tools:context=".LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            >

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/logo"
                android:layout_gravity="center"
                />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:autofillHints="@string/email" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginBottom="30dp"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:importantForAutofill="no" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/black"
                    android:text="@string/login"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/black"

                    />
            </LinearLayout>
        </LinearLayout>


    </FrameLayout>

</ScrollView>