<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/included_tab"
        layout="@layout/toolbar_layout_text_centered"
        />

    <View
        android:id="@+id/toolbar_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F5F5F5"
        app:layout_constraintTop_toBottomOf="@id/included_tab"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            tools:context=".CreateJobActivity">

        <TextView
            android:id="@+id/job_category_label"
            android:layout_width="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:text="@string/job_category"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/job_category"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/job_category_label"
                app:layout_goneMarginTop="16dp" />


            <TextView
                android:id="@+id/job_type_label"
                android:layout_width="0dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:text="@string/job_type"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/job_category"
                />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/job_type"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/job_type_label"
                app:layout_goneMarginTop="16dp" />

            <TextView
                android:id="@+id/job_description_label"
                android:layout_width="0dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:text="@string/job_description"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/job_type"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/job_desc_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/job_description_label">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/job_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:inputType="textCapSentences"
                    android:paddingBottom="10dp"
                    android:textCursorDrawable="@drawable/edit_text_cursor_bg"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/job_attach_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/attachment_s"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:textIsSelectable="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/job_desc_wrapper"/>

            <HorizontalScrollView
                android:id="@+id/job_attach_scroll_cont"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/job_attach_label">

                <LinearLayout
                    android:id="@+id/job_attach_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="start|center"
                    android:visibility="visible">

                    <ImageButton
                        android:id="@+id/ticket_add_attachment_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/form_attachment_bg"
                        android:src="@drawable/ic_add_a_photo_black_24dp"
                        android:padding="14dp"
                        android:tint="@color/colorAccentLight"
                        android:layout_gravity="center"
                        android:contentDescription="@string/add_attachment" />

                </LinearLayout>

            </HorizontalScrollView>

            <Button
                android:id="@+id/save_job_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:background="@color/colorAccentSecondary"
                android:text="@string/save_job"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/job_attach_scroll_cont" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </ScrollView>
</LinearLayout>
